<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	 >

    <LinearLayout
        android:paddingTop="@dimen/padding2"
   	    android:paddingBottom="@dimen/padding1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tab1_act1"
            android:textColor="@color/mainred"
            android:textSize="@dimen/font3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="@dimen/padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font2"
            android:textColor="@color/maingray4"
            android:text="@string/tab1_act1_d" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/tab1_act1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/test_tab1_icon" />

    </LinearLayout>
    <View 
        android:layout_height="match_parent"
        android:layout_width="0.6dp"
        android:background="@color/maingray3"/>
    <LinearLayout
        android:paddingTop="@dimen/padding2"
   	    android:paddingBottom="@dimen/padding1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tab1_act2"
            android:textColor="@color/mainblue"
            android:textSize="@dimen/font3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_marginTop="@dimen/padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font2"
            android:textColor="@color/maingray4"
            android:text="@string/tab1_act2_d" />

        <ImageView
            android:contentDescription="@string/tab1_act1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/test_tab1_icon" />

    </LinearLayout>
    <View 
        android:layout_height="match_parent"
        android:layout_width="0.6dp"
        android:background="@color/maingray3"/>
    <LinearLayout
        android:paddingTop="@dimen/padding2"
   	    android:paddingBottom="@dimen/padding1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tab1_act3"
            android:textColor="@color/mainorange"
            android:textSize="@dimen/font3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_marginTop="@dimen/padding1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font2"
            android:textColor="@color/maingray4"
            android:text="@string/tab1_act3_d" />

        <ImageView
            android:contentDescription="@string/tab1_act1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/test_tab1_icon" />

    </LinearLayout>



</LinearLayout>
