<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_hight"
    android:orientation="vertical" 
    android:background="@color/mainwhite2">
    <View 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
    <RadioGroup 
        android:id="@+id/radiogroup"
        android:layout_marginTop="3dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@null"
        >
        <RadioButton 
            android:id="@+id/id_tab_bottom_1"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/act_main_index"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2green_color_select"
            android:button="@null"
            android:drawableTop="@drawable/tab1_selector"
            />   
        <RadioButton 
            android:id="@+id/id_tab_bottom_2"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/act_main_cate"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2green_color_select"
            android:button="@null"
            android:drawableTop="@drawable/tab2_selector"/>   
        <RadioButton 
            android:id="@+id/id_tab_bottom_3"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/act_main_order"
            android:button="@null"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2green_color_select"
            android:drawableTop="@drawable/tab3_selector"/>   
        <RadioButton 
            android:id="@+id/id_tab_bottom_4"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/act_main_me"
            android:button="@null"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2green_color_select"
            android:drawableTop="@drawable/tab4_selector"/>   
    </RadioGroup>
    

</LinearLayout>
