<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainwhite" >
    <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
    <TextView 
        android:background="@drawable/tab4_cate_bg_selector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate1"
        android:padding="@dimen/padding3"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:clickable="true"
        android:drawableLeft="@drawable/frg_cate_address"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
    <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@color/maingray3"/>
    <TextView 
        android:background="@drawable/tab4_cate_bg_selector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate2"
        android:padding="@dimen/padding3"
        android:clickable="true"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:drawableLeft="@drawable/frg_cate_shoucang"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
    <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
    <View 
        android:layout_height="@dimen/padding3"
        android:layout_width="match_parent"
        android:background="@color/mainwhite3"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
    <TextView 
        android:background="@drawable/tab4_cate_bg_selector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate3"
        android:padding="@dimen/padding3"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:clickable="true"
        android:drawableLeft="@drawable/frg_cate_pingjia"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@color/maingray3"/>
    <TextView 
        android:background="@drawable/tab4_cate_bg_selector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate4"
        android:padding="@dimen/padding3"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:clickable="true"
        android:drawableLeft="@drawable/frg_cate_tui"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
     <View 
        android:layout_height="@dimen/padding3"
        android:layout_width="match_parent"
        android:background="@color/mainwhite3"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
     <TextView 
        android:background="@drawable/tab4_cate_bg_selector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate5"
        android:padding="@dimen/padding3"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:clickable="true"
        android:drawableLeft="@drawable/frg_cate_tel"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@color/maingray3"/>
     <TextView
        android:background="@drawable/tab4_cate_bg_selector" 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate6"
        android:padding="@dimen/padding3"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:clickable="true"
        android:drawableLeft="@drawable/frg_cate_question"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@color/maingray3"/>
     <TextView 
        android:background="@drawable/tab4_cate_bg_selector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/frg_tab4_cate7"
        android:padding="@dimen/padding3"
        android:paddingTop="@dimen/padding2"
        android:paddingBottom="@dimen/padding2"
        android:paddingLeft="@dimen/padding3"
        android:paddingRight="@dimen/padding3"
        android:textColor="@color/maingray5"
        android:clickable="true"
        android:drawableLeft="@drawable/frg_cate_shang"
        android:drawableRight="@drawable/ic_arrow_right_gray"/>
     <View 
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>

    

</LinearLayout>
