<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="vertical" 
    android:background="@color/mainwhite">
    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            >
            
            <TextView
                android:id="@+id/condition_1"
		        android:layout_width="wrap_content"
		        android:background="@null"
				android:layout_centerInParent="true"		        
		        android:layout_height="match_parent"
		        android:gravity="center"
		        android:textColor="@color/gray2red_color_selector"
		        android:textSize="@dimen/font3"
		        android:text="@string/frg_tab1_condition1"
		        android:clickable="true"
		        android:drawableRight="@drawable/tab1_condition_selector"
		         />
        </RelativeLayout>
		    <View 
		        android:layout_height="match_parent"
		        android:layout_width="0.5dp"
		        android:layout_marginTop="@dimen/padding1"
		        android:layout_marginBottom="@dimen/padding1"
		        android:background="@color/maingray3"
		        />
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            >
            
            <TextView
		        android:layout_width="wrap_content"
		        android:background="@null"
				android:layout_centerInParent="true"		        
		        android:layout_height="match_parent"
		        android:gravity="center"
		        android:textColor="@color/gray2red_color_selector"
		        android:textSize="@dimen/font3"
		        android:text="@string/frg_tab1_condition2"
		        android:clickable="true"
		        android:drawableRight="@drawable/tab1_condition_selector"
		         />
        </RelativeLayout>
		    <View 
		        android:layout_height="match_parent"
		        android:layout_width="0.5dp"
		        android:layout_marginTop="@dimen/padding1"
		        android:layout_marginBottom="@dimen/padding1"
		        android:background="@color/maingray3"
		        />
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            >
            
            <TextView
		        android:layout_width="wrap_content"
		        android:background="@null"
				android:layout_centerInParent="true"		        
		        android:layout_height="match_parent"
		        android:gravity="center"
		        android:clickable="true"
		        android:textColor="@color/gray2red_color_selector"
		        android:textSize="@dimen/font3"
		        android:text="@string/frg_tab1_condition3"
		        android:drawableRight="@drawable/tab1_condition_selector"
		         />
        </RelativeLayout>  
    </LinearLayout>
    <View 
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@color/maingray3"/>
</LinearLayout>
