<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >
     <LinearLayout 
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:background="@color/maingreen"
         >
         <ImageView 
             android:layout_marginLeft="20dp"
             android:layout_height="50dp"
             android:layout_width="50dp"
             android:scaleType="fitXY"
             android:src="@drawable/test_store"/>
         <LinearLayout 
             android:layout_marginLeft="@dimen/padding3"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:orientation="vertical">
             <TextView 
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:gravity="center_vertical"
                 android:textColor="@color/mainwhite"
                 android:text="用户名"/>
             <TextView 
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:textColor="@color/mainwhite"
                 android:layout_width="wrap_content"
                 android:drawableLeft="@drawable/frg_tab4_phone"
                 android:text="14589076532"/>
         </LinearLayout>
         <ImageButton 
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:src="@drawable/ic_arrow_right_white"
             android:background="@null"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="@dimen/padding3"/>    
     </LinearLayout>
     <LinearLayout 
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:background="@color/mainwhite2">
         <LinearLayout 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:paddingTop="@dimen/padding3"
             android:paddingBottom="@dimen/padding3"
             android:orientation="vertical">
             <TextView 
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textColor="@color/mainorange"
                 android:textSize="@dimen/font5"
                 android:textStyle="bold"
                 android:text="¥0.00"/>
             <TextView 
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textColor="@color/maingray4"
                 android:textSize="@dimen/font2"
                 android:text="@string/tab4_yue"/>
         </LinearLayout>
         <View 
             android:layout_height="match_parent"
             android:layout_width="0.6dp"
             android:background="@color/maingray3"/>
         <LinearLayout 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:paddingTop="@dimen/padding3"
             android:paddingBottom="@dimen/padding3"
             android:orientation="vertical">
             <TextView 
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textSize="@dimen/font5"
                 android:textStyle="bold"                 
                 android:textColor="@color/mainblue"
                 android:text="0"/>
             <TextView 
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textColor="@color/maingray4"
                 android:textSize="@dimen/font2"
                 android:text="@string/tab4_redbag"/>
         </LinearLayout>
         <View 
             android:layout_height="match_parent"
             android:layout_width="0.6dp"
             android:background="@color/maingray3"/>
         <LinearLayout 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:paddingTop="@dimen/padding3"
             android:paddingBottom="@dimen/padding3"
             android:orientation="vertical">
             <TextView 
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textSize="@dimen/font5"
                 android:textStyle="bold"
                 android:textColor="@color/mainred"
                 android:text="0"/>
             <TextView 
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textColor="@color/maingray4"
                 android:textSize="@dimen/font2"
                 android:text="@string/tab4_score"/>
         </LinearLayout>
         
     </LinearLayout>
     <View 
             android:layout_height="0.6dp"
             android:layout_width="match_parent"
             android:background="@color/maingray3"/>
    

</LinearLayout>
